@startuml
skinparam classAttributeIconSize 0

class Book{
    -int id
    -String author
    -String subject

    +int getId()
    +String getAuthor()
    +String getSubject()

    +void printBook()
}

class User{
    -String name
    -type String
    -List<int> booksBorrowed
    +List<int> getBorrowedBooks()
    +String getName()
    +String getType()
}
note left of User::type
    "Borrower" or "Staff"
end note


class Library{

    'store last borrower of a book'
    -Map<int, String> LastCheckedOutBy 
    -Map<int, String> IsCheckedOutBy
    -Map<int, Book> books
    -Map<string, Borrower> borrowers
    -int idCounter

    +Map<string, Borrower> getBorrowers()

    +void checkoutBook(Book book)
    +void returnBook(Book book)

    +void addBook(Book book)
    +void removeBook(Book book)

    +List<Book> getBooksByAuthor(String author)
    +List<Book> getBooksBySubject(String subject)

    +List<Book> findBooksCheckedOutBy(User borrower)

    +User getLastBorrower(Book book)

}

Library [bookId] --> "0..*" Book : has
Library [name] --> "0..*" User : has

User [bookId] --> "0..*" Book : borrowed

@enduml